crates/swc/tests/tsc-references/staticMemberAssignsToConstructorFunctionMembers_es2015.1.normal.js
class C {
    static foo() {
        C.foo = ()=>{};
    }
    static bar(x1) {
        C.bar = ()=>{} // error
        ;
        C.bar = (x)=>x; // ok
        C.bar = (x)=>1; // ok
        return 1;
    }
}
